--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,47 @@
 asgiref==3.2.3
 Augmentor==0.2.7
+automium==0.2.6
+automium-web==0.1.1
 beautifulsoup4==4.8.2
 bootstrap4==0.1.0
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.0.2
 django-bootstrap4==1.1.1
 django-forms-bootstrap==3.1.0
 django-heroku==0.3.1
+Flask==1.1.1
 future==0.18.2
 gunicorn==20.0.4
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.11.1
+legacy==0.1.6
+MarkupSafe==1.1.1
 natsort==6.2.0
 numpy==1.17.2
+oauthlib==3.1.0
 opencv-python==4.1.1.26
+pandas==1.0.1
 Pillow==6.2.1
 psycopg2==2.7.5
+PyJWT==1.7.1
+python-dateutil==2.8.1
+python3-openid==3.1.0
 pytz==2019.3
+requests==2.22.0
+requests-oauthlib==1.3.0
+scipy==1.4.1
 selenium==3.141.0
+six==1.14.0
+social-auth-app-django==3.1.0
+social-auth-core==3.2.0
 soupsieve==1.9.5
 sqlparse==0.3.0
 tqdm==4.41.0
 urllib3==1.25.7
+Werkzeug==1.0.0
 whitenoise==5.0.1
