--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 install:
 - pip install -r requirements.txt
 script:
+- python manage.py migrate
+- python manage.py makemigrations
 - python manage.py test
 
 deploy:
