--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 script:
 - python manage.py migrate
 - python manage.py makemigrations
-- python manage.py test
+- python manage.py test polls
 
 deploy:
   provider: heroku
