--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
 script:
-- python manage.py test polls
+- python manage.py test
 
 deploy:
   provider: heroku
