--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ automium-web==0.1.1
 beautifulsoup4==4.8.2
 bootstrap4==0.1.0
 certifi==2019.11.28
+channels==2.4.0
 chardet==3.0.4
 Click==7.0
 defusedxml==0.6.0
