--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ beautifulsoup4==4.8.2
 bootstrap4==0.1.0
 certifi==2019.11.28
 channels==2.4.0
+channels_redis==2.4.1
 chardet==3.0.4
 Click==7.0
 defusedxml==0.6.0
@@ -14,7 +15,7 @@ Django==3.0.2
 django-bootstrap4==1.1.1
 django-forms-bootstrap==3.1.0
 django-heroku==0.3.1
-Docker==19.03.8
+docker==19.03.8
 Flask==1.1.1
 future==0.18.2
 gunicorn==20.0.4
