--- a/heroku.yml
+++ b/heroku.yml
@@ -13,10 +13,10 @@ build:
     FOO: bar
 release:
   command:
-    - ./deployment-tasks.sh
+    - ./python manage.py migrate
   image: worker
 run:
-  web: bundle exec puma -C config/puma.rb
+  web: gunicorn mysite.wsgi --log-level debug
   worker: python myworker.py
   asset-syncer:
     command:
