--- a/heroku.yml
+++ b/heroku.yml
@@ -4,15 +4,19 @@ setup:
       as: DATABASE
   config:
     S3_BUCKET: my-example-bucket
+build:
+  docker:
+    web: Dockerfile
+    worker: worker/Dockerfile
   config:
     RAILS_ENV: development
     FOO: bar
 release:
   command:
-    - ./python manage.py migrate
+    - ./deployment-tasks.sh
   image: worker
 run:
-  web: gunicorn mysite.wsgi --log-level debug
+  web: bundle exec puma -C config/puma.rb
   worker: python myworker.py
   asset-syncer:
     command:
