--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.0.2
 django-bootstrap4==1.1.1
+django_extensions==2.2.9
 django-forms-bootstrap==3.1.0
 django-heroku==0.3.1
 Flask==1.1.1
